# PlanExe

./: .env.developer-example  .env.docker-example  .gitignore  AGENTS.md  CODING_STANDARDS.md  PlanExe.code-workspace  README.md  docker-compose.md  docker-compose.yml  glama.json  llm_config.baseline.json  llm_config.custom.json  llm_config.frontier.json  llm_config.json  llm_config.premium.json  planexe  rebuild.sh  test.py  test_oauth_parse.py
docs/: docker.md  (+20 more)
frontend_multi_user/: AGENTS.md  Dockerfile  README.md  pyproject.toml  railway.md
frontend_multi_user/src/: admin_routes.py  app.py  auth.py  billing.py  downloads.py  plan_routes.py  planexe_modelviews.py  utils.py  wsgi.py
frontend_multi_user/templates/: account.html  base.html  demo_run.html  index.html  login.html  models.html  ping.html  plan_create.html  plan_iframe.html  plan_import.html  plan_list.html  plan_resume_from_zip.html  run_via_database.html
frontend_multi_user/templates/admin/: add_credits.html  bulk_change_to_failed.html  database.html  db_size.html  demo_run.html  index.html  reconciliation.html
frontend_multi_user/tests/: test_plan_failure_trace_helpers.py  test_plan_telemetry_helpers.py
worker_plan/: AGENTS.md  Dockerfile  README.md  app.py  pyproject.toml  railway.md  railway.toml  run_plan_cli.py
worker_plan/tests/: test_json_repair_util.py  test_llm_errors.py  test_usage_metrics.py
worker_plan/worker_plan_api/: README.md  filenames.py  format_datetime.py  llm_class_filter.py  llm_info.py  model_profile.py  pipeline_version.py  plan_file.py  planexe_config.py  planexe_dotenv.py  prompt_catalog.py
worker_plan/worker_plan_api/tests/: test_format_datetime.py  test_llm_class_filter.py  test_model_profile.py
worker_plan/worker_plan_internal/: extract_dag.py  llm_factory.py
worker_plan/worker_plan_internal/assume/: classify_domain.py  classify_domain2.py  classify_domain3.py  classify_domain4.py  classify_domain_v1.py  classify_domain_v2.py  classify_domain_v3.py  classify_domain_v4.py  classify_domain_v4dot5.py  classify_domain_v5.py  classify_domain_v6.py  classify_domain_v7.py  classify_domain_v8.py  classify_domain_v9.py  currency_strategy.py  distill_assumptions.py  identify_plan_type.py  identify_purpose.py  identify_risks.py  make_assumptions.py  physical_locations.py  review_assumptions.py
worker_plan/worker_plan_internal/diagnostics/: constraint_checker.py  detect_garbage_prompt.py  experimental_premise_attack1.py  experimental_premise_attack2.py  experimental_premise_attack4.py  experimental_premise_attack5.py  experimental_premise_attack6.py  extract_constraints.py  premise_attack.py  premortem.py  prompt_adherence.py  redline_gate.py  screen_planning_prompt.py  validate_planning_prompt.py
worker_plan/worker_plan_internal/document/: filter_documents_to_create.py  filter_documents_to_find.py  identify_documents.py
worker_plan/worker_plan_internal/expert/: expert_criticism.py  expert_finder.py  pre_project_assessment.py
worker_plan/worker_plan_internal/flaw_tracer/: AGENTS.md  README.md  __init__.py  __main__.py  output.py  prompts.py  registry.py  tracer.py
worker_plan/worker_plan_internal/governance/: governance_phase1_audit.py  governance_phase2_bodies.py  governance_phase3_impl_plan.py  governance_phase4_decision_escalation_matrix.py  governance_phase5_monitoring_progress.py  governance_phase6_extra.py
worker_plan/worker_plan_internal/lever/: candidate_scenarios.py  deduplicate_levers.py  enrich_potential_levers.py  focus_on_vital_few_levers.py  identify_potential_levers.py  select_scenario.py  triage_levers.py
worker_plan/worker_plan_internal/llm_util/: json_repair_util.py  llm_errors.py  llm_executor.py  model_pricing.py  responses_api_llm.py  thinking_aware_openai_like.py  token_counter.py  token_instrumentation.py  token_metrics_store.py  track_activity.py  usage_metrics.py
worker_plan/worker_plan_internal/luigi_util/: parameters.py
worker_plan/worker_plan_internal/markdown_util/: escape_markdown.py
worker_plan/worker_plan_internal/parameter_extraction/: __init__.py  compress_report_section.py  run_compress_full.py
worker_plan/worker_plan_internal/pitch/: convert_pitch_to_markdown.py
worker_plan/worker_plan_internal/plan/: create_wbs_level3.py  data_collection.py  estimate_wbs_task_durations.py  executive_summary.py  expert_cost.py  identify_wbs_task_dependencies.py  ping_llm.py  pipeline_environment.py  project_plan.py  related_resources.py  review_plan.py  run_plan_pipeline.py
worker_plan/worker_plan_internal/questions_and_answers/: questions_and_answers.py
worker_plan/worker_plan_internal/questions_answers/: questions_and_answers.py  questions_answers.py
worker_plan/worker_plan_internal/rca/: AGENTS.md  README.md  __init__.py  __main__.py  output.py  prompts.py  registry.py  tracer.py
worker_plan/worker_plan_internal/report/: report_generator.py  report_template.html
worker_plan/worker_plan_internal/self_audit/: self_audit.py  violates_known_physics.py
worker_plan/worker_plan_internal/swot/: swot_phase2_conduct_analysis.py
worker_plan/worker_plan_internal/team/: enrich_team_members_with_background_story.py  enrich_team_members_with_contract_type.py  enrich_team_members_with_environment_info.py  find_team_members.py  review_team.py  run_hire_team.py
worker_plan/worker_plan_internal/tests/: test_enum_literal_parity.py  test_schema_strict_mode.py
worker_plan/worker_plan_internal/utils/: planexe_config.py  planexe_dotenv.py  planexe_llmconfig.py
(+528 files in other folders)
