[project]
name = "PlanExe-frontend-multiuser"
version = "0.1.0"
description = "Running PlanExe on Railway"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-admin>=1.6.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.0",
    "authlib>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "stripe>=10.7.0,<15.0.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy-utils>=0.41.1",
    "WTForms==3.2.1", # This is an older version of WTForms. Since WTForms 3.2.1 breaks the "edit" button in the admin panel.
    "gunicorn>=23.0.0"
] 

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
