[project]
name = "PlanExe-frontend-multiuser"
version = "0.1.0"
description = "Running PlanExe on Railway"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.3",
    "flask-admin==2.0.2",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.3.0",
    "authlib==1.7.0",
    "psycopg2-binary==2.9.11",
    "requests==2.33.1",
    "stripe==15.1.0",
    "python-dotenv==1.2.2",
    "sqlalchemy-utils==0.42.1",
    "WTForms==3.2.1", # This is an older version of WTForms. Since WTForms 3.2.1 breaks the "edit" button in the admin panel.
    "gunicorn==25.3.0"
] 

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
