[project]
name = "PlanExe"
version = "2025.12.31"
description = "Transform ideas to plans"
authors = [{ name="Simon Strandgaard", email="neoneye@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
# Core dependencies needed regardless of UI
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "colorlog==6.10.1",
    "dataclasses-json==0.6.7",
    "Deprecated==1.3.1",
    "distro==1.9.0",
    "eval_type_backport==0.3.1",
    "fastapi==0.135.3",
    "ffmpy==1.0.0",
    "filelock==3.20.3",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "Jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.3",
    "json_repair==0.58.7",
    "jsonpath-python==1.1.4",
    # "llama-cloud==0.1.8",
    # "llama-index-agent-openai==0.4.1",
    # "llama-index-cli==0.4.0",
    "anthropic==0.84.0",
    "llama-index-core==0.14.12",
    "llama-index-llms-anthropic==0.11.0",
    # "llama-index-embeddings-openai==0.3.1",
    # "llama-index-indices-managed-llama-cloud==0.6.3",
    # "llama-index-llms-groq==0.3.1",
    "llama-index-llms-lmstudio==0.4.1",
    # "llama-index-llms-mistralai==0.4.0",
    "llama-index-llms-ollama==0.9.1",
    "llama-index-llms-openai==0.6.12",
    "llama-index-llms-openai-like==0.5.3",
    "llama-index-llms-openrouter==0.4.2",
    # "llama-index-llms-together==0.3.1",
    # "llama-index-multi-modal-llms-openai==0.4.2",
    "llama-index-readers-file==0.6.0",
    "llama-index-readers-llama-parse==0.6.1",
    "llama-parse==0.6.88",
    "lockfile==0.12.2",
    "luigi==3.8.0",
    "Markdown==3.10",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "marshmallow==3.24.2",
    "mdurl==0.1.2",
    # "mistralai==1.5.2",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "nltk==3.9.3",
    "numpy==2.4.0",
    "ollama==0.6.1",
    "openai==2.14.0",
    "orjson==3.11.6",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.2.0",
    "propcache==0.4.1",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "pydub==0.25.1",
    "Pygments==2.19.2",
    "pypdf==6.7.5",
    "python-daemon==3.1.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "regex==2025.11.3",
    "requests==2.33.1",
    "rich==14.2.0",
    "safehttpx==0.1.7",
    "safetensors==0.7.0",
    "semantic-version==2.10.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.1",
    "SQLAlchemy==2.0.45",
    "starlette==0.50.0",
    "striprtf==0.0.26",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "typer==0.24.1",
    "typing-inspect==0.9.0",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "websockets==16.0",
    "wrapt==2.0.1",
    "yarl==1.22.0",
]

[project.urls]
"Homepage" = "https://github.com/neoneye/planexe"
"Discord" = "https://planexe.org/discord.html"

# Build system configuration
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["worker_plan_internal*", "worker_plan_api*", "worker_plan*"]

[tool.setuptools.package-data]
"worker_plan_internal.prompt.data" = ["*.jsonl"]
"worker_plan_internal.fiction.data" = ["*.jsonl"]
"worker_plan_internal.schedule" = ["*.html"]
"worker_plan_internal.report" = ["*.html"]
"worker_plan_api.prompt.data" = ["*.jsonl"]
